# Symphonizer

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: poetry-pytest-coverage.yml
backup/: generate_dag.py
examples/: basic_end_to_end.py
harmony/: dag_scheduler.py  dag_utils.py  data_service.py  model.py  task_runner.py
harmony/conductor/: conductor.py
sandbox/: generate_dag.py  play_with_dag.py  run_conductor.py  run_task_runner.py  sample_tasks.py
src/harmony/: composition.py  interface.py  model.py  node_runner.py  perform.py  utils.py
src/harmony/conductor/: conductor.py
src/harmony/instruments/: mock.py  nuropb_api.py  rest.py
src/harmony/melody/: dag_scheduler.py  interface.py  node_runner.py
src/symphonizer/: composition.py  interface.py  node_runner.py  perform.py  utils.py
src/symphonizer/instruments/: mock.py  nuropb_api.py  rest.py
tests/: conftest.py  test_composition.py  test_composition_subclass.py  test_conductor.py  test_dag_scheduler.py  test_dag_scheduler_subclass.py  test_end_to_end.py  test_node_runner.py  test_perform.py  test_task_runner.py
tests/instruments/: test_mock_instrument.py  test_nuropb_instrument.py  test_rest_instrument.py
