[tool.poetry]
name = "Harmony"
version = "0.1.0"
description = "Task management and orchestration for the LLM and beyound"
authors = ["Robert Betts <robert.betts@yahoo.com>"]
readme = "README.md"
homepage = "https://github.com/robertbetts/Harmony"
repository = "https://github.com/robertbetts/Harmony"
keywords = ["python", "LLM", "orchestration", "process-management", "task-management", "dag", "process-flow"]
classifiers = [
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
packages = [
    {include = "harmony", from = "src"}
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
poetry = "^1.5.1"
pytest = "^7.3.1"
certifi = "^2022.12.7"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-dotenv = "^0.5.2"
black = "^23.3.0"
mypy = "^1.4.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
env_files = [".env_test"]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
log_cli_format = " %(levelname).1s %(asctime)s,%(msecs)d %(module)s %(lineno)s %(message)s"
log_cli_date_format = "%d %H:%M:%S"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "src"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "tests",
]

[tool.pylint]
#ignore-paths = "tests"
notes = "FIXME,XXX"